<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_gray"
    >
    <include layout="@layout/title"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/dp_20"
        android:paddingRight="@dimen/dp_20"
        android:paddingTop="@dimen/dp_10"
        android:paddingBottom="@dimen/dp_10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        >
        <ImageView
            android:id="@+id/lxr_queryImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@mipmap/lxr_query"/>
        <!-- 搜索输入框 -->
        <EditText
            android:id="@+id/lxr_queryEt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_toRightOf="@+id/lxr_queryImg"
            android:layout_centerVertical="true"
            android:background="@null"
            android:hint="@string/text_lxr_search"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/text_huise"
            android:singleLine="true"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/lxr_yuyin"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:visibility="gone"
            />
    </RelativeLayout>
    <!--  顶部功能按钮  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/dp_20"
        android:paddingRight="@dimen/dp_20"
        android:paddingTop="@dimen/dp_10"
        android:paddingBottom="@dimen/dp_10"
        android:background="@color/white"
        android:orientation="horizontal"
        >
        <!--  编辑  -->
        <RadioButton
            android:id="@+id/lxr_edit"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@mipmap/wd_icon_wdkb"
            android:text="@string/text_lxr_bj"
            android:textSize="@dimen/sp_16"
            style="@style/Wd_RadioButton"
            />
        <!--  标签  -->
        <RadioButton
            android:id="@+id/lxr_label"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@mipmap/wd_icon_wdkb"
            android:text="@string/text_lxr_bq"
            android:textSize="@dimen/sp_16"
            style="@style/Wd_RadioButton"
            />
        <!--  同步  -->
        <RadioButton
            android:id="@+id/lxr_sync"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@mipmap/wd_icon_wdkb"
            android:text="@string/text_lxr_tb"
            android:textSize="@dimen/sp_16"
            style="@style/Wd_RadioButton"
            />
        <!--  快速拨号  -->
        <RadioButton
            android:id="@+id/lxr_fast_dial"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@mipmap/wd_icon_wdkb"
            android:text="@string/text_lxr_ksbh"
            android:textSize="@dimen/sp_16"
            style="@style/Wd_RadioButton"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0_5"
        android:background="@color/huixian"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!--  通讯录集合  -->
        <ListView
            android:id="@+id/lxr_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@null"
            />
        <!--  通讯录右侧字母导航  -->
        <com.yhw.alixiaohao.view.SideBar
            android:id="@+id/lxr_sideBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:paddingRight="@dimen/dp_20"
            android:textColor="@color/text_huise"
            android:textSize="15sp" />
    </RelativeLayout>


</LinearLayout>