<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <FrameLayout
        android:id="@+id/wd_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_150"
            android:background="@color/bg_blue"
            >

            <ImageView
                android:layout_width="@dimen/dp_25"
                android:layout_height="@dimen/dp_25"
                android:src="@mipmap/gd"
                android:layout_marginLeft="@dimen/dp_30"
                android:layout_marginTop="@dimen/dp_15"
                />

            <ImageView
                android:id="@+id/wd_topPop"
                android:layout_width="@dimen/dp_25"
                android:layout_height="@dimen/dp_25"
                android:layout_alignParentRight="true"
                android:src="@mipmap/gd"
                android:layout_marginRight="@dimen/dp_30"
                android:layout_marginTop="@dimen/dp_15"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dp_15"
                android:text="我的"
                android:textSize="@dimen/sp_18"
                android:textColor="@color/white"
                />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_80"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginRight="@dimen/dp_30"
            android:layout_marginTop="100dp"
            android:background="@drawable/shape_wd_wdxh"
            >
            <ImageView
                android:id="@+id/wd_wdhmImg"
                android:layout_width="@dimen/dp_40"
                android:layout_height="@dimen/dp_40"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp_20"
                android:src="@mipmap/wdhm"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/wd_wdhmImg"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp_15"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_wd_wdhm"
                    android:textSize="@dimen/sp_16"
                    android:textColor="@color/text_black"
                    />
                <TextView
                    android:id="@+id/wd_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_wd_show_test"
                    android:textSize="@dimen/sp_12"
                    android:textColor="@color/text_huise"
                    />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dp_40"
                android:layout_alignParentRight="true"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="@dimen/sp_16"
                    android:textColor="@color/text_black"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_wd_yh"
                    android:textSize="@dimen/sp_12"
                    android:textColor="@color/text_huise"
                    />
            </LinearLayout>

        </RelativeLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/wd_Img"
            android:layout_width="@dimen/dp_80"
            android:layout_height="@dimen/dp_80"
            android:layout_gravity="right"
            android:layout_marginRight="@dimen/dp_45"
            android:layout_marginTop="@dimen/dp_60"
            android:src="@mipmap/ic_launcher"
            app:civ_border_width="@dimen/dp_2"
            app:civ_border_color="@color/huixian"
            />
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_30"
        android:layout_below="@+id/wd_frame"
        android:scrollbars="none"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_220"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:orientation="vertical"
                android:background="@drawable/shape_wd_wdxh"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_0"
                    android:layout_weight="1"
                    >
                    <!-- 我的小号 1-->
                    <LinearLayout
                        android:layout_width="@dimen/dp_0"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:gravity="center_vertical">
                            <ImageView
                                android:id="@+id/wd_xh1Icon"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@mipmap/k_syz"
                                />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/dp_2"
                                android:text="我的小号 1"
                                android:textSize="@dimen/sp_14"
                                android:textColor="@color/text_huise"
                                />
                        </LinearLayout>
                        <TextView
                            android:id="@+id/wd_xh1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_wd_show_test"
                            android:textColor="@color/text_blue"
                            style="@style/Wd_Phone_Text"
                            />
                        <ImageView
                            android:id="@+id/wd_xhImg1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/btn_jc"
                            />
                    </LinearLayout>
                    <!-- 我的小号 2-->
                    <LinearLayout
                        android:layout_width="@dimen/dp_0"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:gravity="center_vertical">
                            <ImageView
                                android:id="@+id/wd_xh2Icon"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@mipmap/k_mr"
                                />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/dp_2"
                                android:text="我的小号 2"
                                android:textSize="@dimen/sp_14"
                                android:textColor="@color/text_huise"
                                />
                        </LinearLayout>
                        <TextView
                            android:id="@+id/wd_xh2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_wd_show_no_number"
                            android:textColor="@color/text_black"
                            style="@style/Wd_Phone_Text"
                            />
                        <ImageView
                            android:id="@+id/wd_xhImg2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/btn_hq"
                            />
                    </LinearLayout>
                </LinearLayout>
                <!-- ========================分割线======================== -->
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_0_5"
                    android:background="@color/huixian"
                    />
                <!-- ========================分割线======================== -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_0"
                    android:layout_weight="1"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        >
                        <!--  免费呼  -->
                        <RadioButton
                            android:layout_width="@dimen/dp_0"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:drawableTop="@mipmap/wd_icon_mfh"
                            android:text="@string/text_wd_mfh"
                            android:textSize="@dimen/sp_16"
                            style="@style/Wd_RadioButton"
                            />
                        <!--  推荐有礼  -->
                        <RadioButton
                            android:layout_width="@dimen/dp_0"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:drawableTop="@mipmap/wd_icon_mfh"
                            android:text="@string/text_wd_tjyl"
                            android:textSize="@dimen/sp_16"
                            style="@style/Wd_RadioButton"
                            />
                        <!--  账户充值  -->
                        <RadioButton
                            android:layout_width="@dimen/dp_0"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:drawableTop="@mipmap/wd_icon_zhcz"
                            android:text="@string/text_wd_zhcz"
                            android:textSize="@dimen/sp_16"
                            style="@style/Wd_RadioButton"
                            />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <!--  广告图片  -->
            <com.yhw.alixiaohao.view.XCRoundRectImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/dp_10"
                android:src="@mipmap/wd_adx_cjgg"
                />

            <!--  我的功能  -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginBottom="@dimen/dp_10"
                android:paddingLeft="@dimen/dp_20"
                android:paddingRight="@dimen/dp_20"
                android:background="@drawable/shape_wd_wdxh"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:text="@string/text_wd_my_func"
                    android:textSize="@dimen/sp_16"
                    android:textColor="@color/text_huise"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/dp_40"
                    android:layout_marginBottom="@dimen/dp_35"
                    android:gravity="center">
                    <!--  优惠组合  -->
                    <RadioButton
                        android:layout_width="@dimen/dp_0"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@mipmap/wd_icon_yhzh"
                        android:text="@string/text_wd_yhzh"
                        android:textSize="@dimen/sp_14"
                        style="@style/Wd_RadioButton"
                        />
                    <!--  热门活动  -->
                    <RadioButton
                        android:layout_width="@dimen/dp_0"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@mipmap/wd_icon_rmhd"
                        android:text="@string/text_wd_rmhd"
                        android:textSize="@dimen/sp_14"
                        style="@style/Wd_RadioButton"
                        />
                    <!--  我的卡包  -->
                    <RadioButton
                        android:layout_width="@dimen/dp_0"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@mipmap/wd_icon_wdkb"
                        android:text="@string/text_wd_wdkb"
                        android:textSize="@dimen/sp_14"
                        style="@style/Wd_RadioButton"
                        />
                    <!--  积分签到  -->
                    <RadioButton
                        android:layout_width="@dimen/dp_0"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@mipmap/wd_icon_jfqd"
                        android:text="@string/text_wd_jfqd"
                        android:textSize="@dimen/sp_14"
                        style="@style/Wd_RadioButton"
                        />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>

    </ScrollView>


</RelativeLayout>